@@ -50,6 +50,10 @@ crest_envelope.m
 
 	 CREST_ENVELOPE  Compute the envelope for the Right Ventricle's crest
 	
+estimate_bias_field.m
+
+estimate_block_fgbg.m
+
 is_lv_on_the_left.m
 
 	 IS_LV_ON_THE_LEFT  Check whether the left ventricle is on the left hand
@@ -121,6 +125,11 @@ cgal_tri_fillholes.m
 
 	 CGAL_TRI_FILLHOLES  Fill holes in a triangular mesh, with triangles.
 	
+cgal_tri_simplify.m
+
+	 CGAL_TRI_SIMPLIFY  Reduce number of faces in triangular mesh using edge
+	 collapse.
+	
 
 FileFormatToolbox
 -------------------------------------------------------------
@@ -145,27 +154,33 @@ matlab2vox_seg3d.m
 	 MATLAB2VOX_SEG3D  Convert Matlab file with Seg3D segmentation to vox
 	 format (for the Tarantula meshing application)
 	
+ndpi_focus_points.m
+
+	 NDPI_FOCUS_POINTS  Read focus points coordinates from .ndpi image file
+	 obtained from a Hamamatsu microscope.
+	
 parsave.m
 
 	 parsave  Save workspace variables to file within a parfor loop.
 	
+scimat_load.m
+
+	 SCIMAT_LOAD  Load an image into a SCIMAT struct from a Matlab, MetaImage,
+	 Carl Zeiss LSM or Hamamatsu VMU file.
+	
+scimat_save.m
+
+	 SCIMAT_SAVE  Save a SCIMAT struct to a Matlab or MetaImage format that
+	 can be imported by Seg3D and Seg3D2.
+	
 scinrrd_im2nrrd.m
 
-	 SCINRRD_IM2NRRD  Create SCI NRRD struct from Matlab data
+	 SCINRRD_IM2NRRD  Create SCI NRRD struct from Matlab data.
 	
 scinrrd_index2world.m
 
 	 SCINRRD_INDEX2WORLD  Convert data volume indices to real world
 	 coordinates for NRRD volumes created by SCI applications (e.g. Seg3D)
-	
-scinrrd_load.m
-
-	 SCINRRD_LOAD  Load a SCINRRD struct from a Matlab, MetaImage or LSM file
-	
-scinrrd_save.m
-
-	 SCINRRD_SAVE  Save a NRRD struct to a Matlab/MetaImage format that can be
-	 imported by Seg3D and Seg3D2
 	
 scinrrd_seg3d2matlab.m
 
@@ -174,7 +189,7 @@ scinrrd_seg3d2matlab.m
 	
 scinrrd_tiff2nrrd.m
 
-	 SCINRRD_TIFF2NRRD  Create SCI NRRD struct from TIFF stack
+	 SCINRRD_TIFF2NRRD  Create SCI NRRD struct from TIFF stack.
 	
 scinrrd_world2index.m
 
@@ -206,6 +221,10 @@ WriteRawFile.m
 FiltersToolbox
 -------------------------------------------------------------
 
+amrf_seg.m
+
+	 AMRF_SEG  Adaptive Markov Random Field segmentation.
+	
 blockproc3.m
 
 	 BLOCKPROC3  Block processing for a 3D image
@@ -264,6 +283,11 @@ imblend.m
 img_tps_map.m
 
 	 IMG_TPS_MAP Warp an image using a thin-plate spline transformation
+	
+im_modes.m
+
+	 IM_MODES  Estimate typical values (modes) of foreground/background
+	 intensities in a greyscale image.
 	
 labmathmorph.m
 
@@ -341,7 +365,7 @@ scinrrd_seg2label_stats.m
 scinrrd_seg2voxel_stats.m
 
 	 SCINRRD_SEG2VOXEL_STATS  Shape stats for each voxel in a segmentation
-	 based on a windowed neighbourhood
+	 based on a windowed neighbourhood.
 	
 scinrrd_skeleton_prune.m
 
@@ -385,7 +409,7 @@ ItkToolbox
 
 itk_imfilter.m
 
-	 ITK_IMFILTER: Run ITK filter on a 2D, 3D or 4D image
+	 ITK_IMFILTER  Run ITK filter on a 2D, 3D or 4D image.
 	
 itk_pstransform.m
 
@@ -404,6 +428,16 @@ ManifoldToolbox
 add_vertex_to_tri.m
 
 	 ADD_VERTEX_TO_TRI  Add vertices to a triangular mesh
+	
+arclen2chord.m
+
+	 ARCLEN2CHORD  Sphere arc length distances to Euclidean chord length
+	 distances.
+	
+chord2arclen.m
+
+	 CHORD2ARCLEN  Euclidean chord length distances to sphere arc length
+	 distances.
 	
 closest_trifacet.m
 
@@ -433,10 +467,16 @@ dmatrix_sphmesh.m
 	 DMATRIX_SPHMESH  Sparse great-circle distance and shortest-path distance 
 	 matrices between the nodes of a spherical mesh
 	
+graphcc.m
+
+	 GRAPHCC  Split a graph into connected components.
+	
 lmdscale.m
 
 	 LMDSCALE  Local neighbourhood Multidimensional scaling on a plane
 	
+make_dmatrix_congruent_with_sphere.m
+
 proj_on_sphere.m
 
 	 PROJ_ON_SPHERE  Project a point configuration onto a sphere
@@ -457,9 +497,26 @@ smdscale.m
 
 	 SMDSCALE  Local neighbourhood Multidimensional scaling on a sphere
 	
+sphtri_signed_vol.m
+
+	 SPHTRI_SIGNED_VOL  Signed volume of the elements of a sphere partitioned
+	 into tetrahedra.
+	
+sphtri_vertex_istangled.m
+
+	 SPHTRI_VERTEX_ISTANGLED Find tangled vertices in a spherical triangular
+	 mesh.
+	
+sphtri_vertex_untangle.m
+
 surface_tridomain.m
 
 	 SURFACE_TRIDOMAIN  Triangular mesh to cover a planar or spherical domain
+	
+tri_ccqp_smacof_nofold_sph_pip.m
+
+	 TRI_CCQP_SMACOF_NOFOLD_SPH_PIP  Constraints in PIP format for CCQP-SMACOF
+	 to ensure that 2D triangules on the sphere preserve positive orientation.
 	
 triconncomp.m
 
@@ -467,7 +524,7 @@ triconncomp.m
 	
 trifacet_signed_area.m
 
-	 TRIFACET_SIGNED_AREA  Signed area of the facets in a 2D triangulation
+	 TRIFACET_SIGNED_AREA  Signed area of the facets in a 2D triangulation.
 	
 tri_find_nonmanifold_vertex.m
 
@@ -479,14 +536,29 @@ trihemisphere.m
 	 TRIHEMISPHERE  Triangular mesh on hemisphere with roughly uniformly
 	 distributed points
 	
+tri_qcqp_smacof_nofold_2d.m
+
+	 TRI_QCQP_SMACOF_NOFOLD_2D  Constraints for QCQP-SMACOF to ensure that a
+	 2D triangular mesh has no fold-overs.
+	
+tri_qcqp_smacof_nofold_2d_pip.m
+
+	 TRI_QCQP_SMACOF_NOFOLD_2D_PIP  Constraints in PIP format for QCQP-SMACOF
+	 to ensure that 2D triangules preserve positive orientation.
+	
+tri_sphparam.m
+
+	 TRI_SPHPARAM  Spherical parametrization of closed triangular mesh.
+	
 tri_squeeze.m
 
 	 TRI_SQUEEZE  Remove disconnected vertices from triangular mesh
 	
 vertex_untangle.m
 
-	 VERTEX_UNTANGLE  Location of a 2D vertex at the centre of a closed fan
-	 triangular mesh so that we avoid edge overlapping.
+	 VERTEX_UNTANGLE  Find 2D coordinates for a free vertex surrounded
+	 by a polygon of fixed counter-clockwise sorted vertices such that the
+	 free vertex is untangled.
 	
 
 PointsToolbox
@@ -496,6 +568,11 @@ bwmesh.m
 
 	 BWMESH  Tetrahedral volumetric and triangular surface mesh of a binary
 	 segmentation
+	
+cons_smacof_pip.m
+
+	 CONS_SMACOF_PIP  SMACOF algorithm with polynomial constraints (PIP file
+	 format)
 	
 coords_from_dist_gower.m
 
@@ -637,6 +714,11 @@ pts_tps_weights.m
 	 PTS_TPS_WEIGHTS  Compute weights and affine parameters of thin-plate
 	 spline warp for N-dimensional points
 	
+qcqp_smacof.m
+
+	 QCQP_SMACOF  Scaling by MAjorizing a COnvex Function (SMACOF) algorithm
+	 posed as a Quadratic Program with Quadratic Constraints (QPQC).
+	
 quaternion2matrix.m
 
 	 QUATERNION2MATRIX  Convert quaternion to rotation matrix
@@ -655,7 +737,7 @@ scimat_dmatrix_imgeodesic.m
 scimat_dmatrix_thickslice.m
 
 	 SCIMAT_DMATRIX_THICKSLICE  Compute a distance/adjacency matrix for a
-	 segmentation that consists of scattered points in slices wide apart
+	 segmentation that consists of scattered points in slices wide apart.
 	
 scimat_simlandmarks_thickslice.m
 
@@ -671,6 +753,11 @@ scinrrd_surface_interpolation.m
 
 	 SCINRRD_SURFACE_INTERPOLATION  Interpolate a surface and create a
 	 segmentation mask from a scattered set of points
+	
+smacof.m
+
+	 SMACOF  Classic implementation of SMACOF (Scaling by MAjorizing a COnvex
+	 Function) algorithm for MDS (Multidimensional Scaling)
 	
 sparse_breakdown.m
 
@@ -728,6 +815,15 @@ gridfit.m
 	          that approximates your data, but allows you to control the
 	          amount of smoothing.
 	
+inhull.m
+
+	 inhull: tests if a set of points are inside a convex hull
+	 usage: in = inhull(testpts,xyz)
+	 usage: in = inhull(testpts,xyz,tess)
+	 usage: in = inhull(testpts,xyz,tess,tol)
+	
+isedm.m
+
 IsomapII.m
 
 	 ISOMAPII   Computes Isomap embedding using an advanced version of
@@ -744,12 +840,22 @@ L2_distance.m
 
 	 L2_DISTANCE - computes Euclidean distance matrix
 	
+networkComponents.m
+
+	 [nClusters,sizes,members,idxLargestCluster] = networkComponents(A)
+	
 pointTriangleDistance.m
 
 	 POINTTRIANGLEDISTANCE  Calculate distance between a point and a triangle
 	 in 3D
 	
 polygeom.m
+
+sphereFit.m
+
+tiff_read_header.m
+
+tightfig.m
 
 
 ThirdPartyToolbox/FastMarchingToolbox
@@ -1621,6 +1727,12 @@ view_nii_menu.m
 	  Imbed Zoom, Interp, and Info menu to view_nii window.
 	
 xform_nii.m
+
+
+ThirdPartyToolbox/OptiToolbox
+-------------------------------------------------------------
+
+opti_Install.m
 
 
 ThirdPartyToolbox/SpharmToolbox
